dilang-interpreter/test/cases/errors/unknown_method.di
capability Logger { fn info(msg: Str) }

fn main() {
    with [ Logger <- StdoutLogger @ 'Process ] @ 'Process {
        Logger.bogus("x")
    }
}
